--- a/recipes/broc.cheddar.html
+++ b/recipes/broc.cheddar.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Broccoli Cheddar Soup</h1>
-        <img src="./images/broc.cheddar.jpg" alt="white bowl with Broccoli cheddar soup and silver spoon">
+        <img src="images/broc.cheddar.jpg" alt="white bowl with Broccoli cheddar soup and silver spoon">
         <h2>A great crowd pleaser for any Occation</h2>
         <p>This easy to make soup is one of our best sellers at Van Patton Golf Club</p>
         <p>This recipe makes almost 2 gallons so its perfect for large gathering and restaurants</p>
