fixed the image link

--- a/recipes/clam.chowder.html
+++ b/recipes/clam.chowder.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>New England Clam Chowder</h1>
-        <img src="./images/clam.chowder.jpg" alt="white bowl with clam chowder and silver spoon">
+        <img src="images/clam.chowder.jpg" alt="white bowl with clam chowder and silver spoon">
         <h2>This Chowder will Transport you to the shores of New England</h2>
         <p>This is one of our most popular soups and is a staple on the menu at Van Patton Golf Club</p>
         <p>This recipe makes almost 2 gallons so its perfect for holiday parties or for gameday parties</p>
