fixed the image link

--- a/recipes/buff.chix.html
+++ b/recipes/buff.chix.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Buffalo Chicken Soup</h1>
-        <img src="./images/buff.chix.jpeg" alt="Blue and White bowl with buffalo chicken soup with silver spoon">
+        <img src="images/buff.chix.jpg" alt="Blue and White bowl with buffalo chicken soup with silver spoon">
         <h2>The Perfect Soup for Football Season</h2>
         <p>This soup is one of my families all time favorites. It goes perfect with Football and cooler weather</p>
         <p>This recipe makes almost 2 gallons so its perfect for a large gameday party or meal prep for the week</p>
